# conan-gtest

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.py  conanfile.py
test/: CMakeLists.txt  conanfile.py  test.cpp
test_package/: conanfile.py
